--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-dom": "^19.1.1",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.13",
+    "vaul": "^1.1.2",
     "wouter": "^3.7.1"
   },
   "devDependencies": {
